<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PesquisaProjetosFragment">

    <Spinner
        android:id="@+id/spinProjetoAno"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:entries="@array/anos_array"
        android:gravity="center_horizontal|center_vertical"
        android:textAlignment="viewEnd" />

    <TextView
        android:id="@+id/txtProjetoAtualizacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ATUALIZADO: "
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtProjetos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtProjetoCoordenadores"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtProjetoDiscentes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewProjetos"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="PROJETOS"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCoordenadores"
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="COORDENADORES"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewProjetosDiscentes"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="DISCENTES ENVOLVIDOS"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnProjetoPorAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="POR ANO" />

        <Button
            android:id="@+id/btnProjetoArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Por Área" />

        <Button
            android:id="@+id/btnProjetoGrandeArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Por Grande Área" />

        <Button
            android:id="@+id/btnProjetoLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="LISTA DOS PROJETOS" />

    </LinearLayout>

    <SearchView
        android:id="@+id/searchProjetos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtProjetoTituloTabela"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgProjetosShare"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="?attr/actionModeShareDrawable" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tabelaProjeto"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>