<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PesquisaFragment">

    <Spinner
        android:id="@+id/spinAno"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:entries="@array/anos_array"
        android:gravity="center_horizontal|center_vertical"
        android:textAlignment="viewEnd" />

    <TextView
        android:id="@+id/txtAtualizacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ATUALIZADO: "
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPeriodicos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAnais"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCapitulos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLivros"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="EM PERIÓDICOS"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="EM ANAIS DE EVENTOS"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="CAPÍTULO DE LIVROS"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="LIVROS"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPorProducao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Por Produção" />

        <Button
            android:id="@+id/btnArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Por Área" />

        <Button
            android:id="@+id/btnGrandeArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Por Grande Área" />

        <Button
            android:id="@+id/btnBolsistas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Bolsistas CNPq" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progresso"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        tools:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTituloTabela"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgProducoesShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="?attr/actionModeShareDrawable" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tabela"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>