<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PesquisaGruposFragment">

    <TextView
        android:id="@+id/txtGrupoAtualizacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ATUALIZADO: "
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtGrupoCertificados"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtGrupoDocentes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtGrupoTecnicos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtGrupoDiscentes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCertificados"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="CERTIFICADOS"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDocentes"
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="DOCENTES"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTecnicos"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="TECNICOS"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDiscentes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="DISCENTES"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGrupoListaProjetos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="LISTA DE DE GRUPOS" />

        <Button
            android:id="@+id/btnGrupoArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="GRUPOS POR ÁREA" />

    </LinearLayout>

    <SearchView
        android:id="@+id/searchGrupos"
        android:layout_width="match_parent"
        android:layout_height="30dp" >

    </SearchView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtGrupoTituloTabela"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgGruposShare"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="?attr/actionModeShareDrawable" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tabelaGrupo"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>